update package naming convention, socials

--- a/debian/tinyllama-mdns/DEBIAN/control
+++ b/debian/tinyllama-mdns/DEBIAN/control
@@ -5,4 +5,5 @@ Section: utils
 Priority: optional
 Architecture: amd64
 Description: Official Avahi mDNS configuration for Tiny Llama by InsightReactions
-Depends: avahi-daemon
+Depends: avahi-daemon, tinyllama
+Recommends: tinyllama-plus
