--- a/debian/tinyllama/DEBIAN/control
+++ b/debian/tinyllama/DEBIAN/control
@@ -6,4 +6,5 @@ Priority: optional
 Architecture: amd64
 Description: Official Tiny Llama webserver by InsightReactions
 Depends: python3-venv, curl, git
+Recommends: tinyllama-plus
 Suggests: tinyllama-mdns
