--- a/debian/tinyllama-ollama/DEBIAN/control
+++ b/debian/tinyllama-ollama/DEBIAN/control
@@ -1,4 +1,4 @@
-Package: ollama
+Package: tinyllama-ollama
 Version: 0.1.38
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
@@ -6,3 +6,4 @@ Priority: optional
 Architecture: amd64
 Description: ollama configured for the Tiny Llama AI Home server platform by InsightReactions
 Depends: curl
+Reccomends: tinyllama, tinyllama-plus
