--- a/debian/tlweb-open-webui/DEBIAN/control
+++ b/debian/tlweb-open-webui/DEBIAN/control
@@ -1,4 +1,4 @@
-Package: open-webui
+Package: tlweb-open-webui
 Version: 1.0-git-d43ee0f
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
