fix depends loop for mdns and tinyllama packages, configure baseline no sleep

--- a/debian/tinyllama-mdns/DEBIAN/control
+++ b/debian/tinyllama-mdns/DEBIAN/control
@@ -5,5 +5,5 @@ Section: utils
 Priority: optional
 Architecture: amd64
 Description: Official Avahi mDNS configuration for Tiny Llama by InsightReactions
-Depends: avahi-daemon, tinyllama
-Recommends: tinyllama-plus
+Depends: avahi-daemon
+Recommends: tinyllama, tinyllama-plus
