--- a/debian/tlweb-swarmui/DEBIAN/control
+++ b/debian/tlweb-swarmui/DEBIAN/control
@@ -1,9 +1,9 @@
-Package: tlweb-stableswarmui
-Version: 0.6.2-Beta
+Package: tlweb-swarmui
+Version: 0.9.0-Beta
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
 Priority: optional
 Architecture: amd64
-Description: StableSwarmUI configured for the Tiny Llama AI Home server platform by InsightReactions
+Description: SwarmUI configured for the Tiny Llama AI Home server platform by InsightReactions
 Depends: git, rsync
 Recommends: tinyllama, tinyllama-plus
