--- a/debian/tlweb-swarmui/DEBIAN/control
+++ b/debian/tlweb-swarmui/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: tlweb-swarmui
-Version: 0.9.0-Beta
+Version: 1.0-0.9.0-Beta
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
 Priority: optional
