--- a/debian/tinyllama/etc/systemd/system/tinyllama-upgrade.service
+++ b/debian/tinyllama/etc/systemd/system/tinyllama-upgrade.service
@@ -4,7 +4,8 @@ Description=Upgrade packages using apt
 [Service]
 Type=simple
 ExecStart=apt upgrade -y
-Restart=on-failure
+StandardInput=tty-force
+TTYPath=/dev/tty1
 
 [Install]
 WantedBy=multi-user.target
