--- a/debian/tinyllama-openedai-speech/DEBIAN/control
+++ b/debian/tinyllama-openedai-speech/DEBIAN/control
@@ -1,5 +1,5 @@
-Package: tlweb-open-webui
-Version: 1.3.0-0.3.12
+Package: tinyllama-openedai-speech
+Version: 1.0.0-0.17.2
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
 Priority: optional
@@ -7,5 +7,5 @@ Architecture: amd64
 Description: Open WebUI is an extensible, feature-rich, and user-friendly self-hosted web-based AI
  chat interface designed to operate entirely offline. It supports various LLM runners, including Ollama and
  OpenAI-compatible APIs.
-Depends: docker-ce, tinyllama-ollama ( >= 1.0.3-0.3.4 ), tinyllama-openedai-speech
+Depends: docker-ce
 Recommends: tinyllama
