--- a/debian/tlweb-amica/DEBIAN/control
+++ b/debian/tlweb-amica/DEBIAN/control
@@ -7,3 +7,4 @@ Architecture: amd64
 Description: Amica is an open source interface for interactive communication with 3D characters with voice synthesis and speech recognition.
 Depends: sudo, git, nodejs, npm, tinyllama-ollama ( >= 1.0.8-0.3.10 ), tinyllama-openedai-speech
 Recommends: tinyllama
+Homepage: https://github.com/semperai/amica
