--- a/debian/tlweb-open-webui/DEBIAN/control
+++ b/debian/tlweb-open-webui/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: tlweb-open-webui
-Version: 1.3.3-0.3.16
+Version: 1.3.3-0.3.28
 Maintainer: InsightReactions <support@insightreactions.com>
 Section: utils
 Priority: optional
@@ -9,3 +9,4 @@ Description: Open WebUI is an extensible, feature-rich, and user-friendly self-h
  OpenAI-compatible APIs.
 Depends: docker-ce, tinyllama-ollama ( >= 1.0.8-0.3.10 ), tinyllama-openedai-speech
 Recommends: tinyllama
+Homepage: https://github.com/open-webui/open-webui
